// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiTsClientGenerator - FastAPI gaps > JSON-encoded primitive responses > should JSON-parse primitives on a JSON wire and keep text/plain raw > client.gen.ts 1`] = `
"/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.plainStamp = this.plainStamp.bind(this);
    this.plainStr = this.plainStr.bind(this);
    this.plainText = this.plainText.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async plainStamp(): Promise<Date> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};

    const body = undefined;

    const response = await this.$fetch(
      this.$url('/plain-stamp', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return new Date(await response.json());
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }

  public async plainStr(): Promise<string> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};

    const body = undefined;

    const response = await this.$fetch(
      this.$url('/plain-str', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }

  public async plainText(): Promise<string> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};

    const body = undefined;

    const response = await this.$fetch(
      this.$url('/plain-text', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return await response.text();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - FastAPI gaps > JSON-encoded primitive responses > should JSON-parse primitives on a JSON wire and keep text/plain raw > types.gen.ts 1`] = `
"export type PlainStampError = never;
export type PlainStrError = never;
export type PlainTextError = never;
"
`;

exports[`openApiTsClientGenerator - FastAPI gaps > tuples (3.1 prefixItems) > should type tuples positionally and revive dates inside them > client.gen.ts 1`] = `
"import type { TupleOutput, PutTuplesRequest } from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static TupleOutput = {
    toJson: (model: TupleOutput): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.pair === undefined
          ? {}
          : {
              pair: model.pair,
            }),
        ...(model.stamped === undefined
          ? {}
          : {
              stamped: [
                (model.stamped as any)[0],
                (model.stamped as any)[1].toISOString(),
              ],
            }),
        ...(model.points === undefined
          ? {}
          : {
              points: model.points,
            }),
      };
    },
    fromJson: (json: any): TupleOutput => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        pair: json['pair'],
        stamped: [json['stamped'][0], new Date(json['stamped'][1])] as [
          string,
          Date,
        ],
        points: json['points'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.getTuples = this.getTuples.bind(this);
    this.putTuples = this.putTuples.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async getTuples(): Promise<TupleOutput> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};

    const body = undefined;

    const response = await this.$fetch(
      this.$url('/tuples', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return $IO.TupleOutput.fromJson(await response.json());
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }

  public async putTuples(input: PutTuplesRequest): Promise<void> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/json';
    }
    const body =
      typeof input === 'object'
        ? JSON.stringify($IO.TupleOutput.toJson(input))
        : String($IO.TupleOutput.toJson(input));

    const response = await this.$fetch(
      this.$url('/tuples', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 204) {
      return undefined;
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - FastAPI gaps > tuples (3.1 prefixItems) > should type tuples positionally and revive dates inside them > types.gen.ts 1`] = `
"export type TupleOutput = {
  pair: [number, string];
  stamped: [string, Date];
  points: Array<[number, number]>;
};
export type GetTuplesError = never;

export type PutTuplesRequest = TupleOutput;
export type PutTuplesError = never;
"
`;

exports[`openApiTsClientGenerator - FastAPI gaps > urlencoded form bodies > should send urlencoded key=value pairs, not JSON > client.gen.ts 1`] = `
"import type {
  Login200Response,
  LoginRequestContent,
  LoginRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static Login200Response = {
    toJson: (model: Login200Response): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.username === undefined
          ? {}
          : {
              username: model.username,
            }),
      };
    },
    fromJson: (json: any): Login200Response => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        username: json['username'],
      };
    },
  };

  public static LoginRequestContent = {
    toJson: (model: LoginRequestContent): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.username === undefined
          ? {}
          : {
              username: model.username,
            }),
        ...(model.password === undefined
          ? {}
          : {
              password: model.password,
            }),
        ...(model.remember === undefined
          ? {}
          : {
              remember: model.remember,
            }),
        ...(model.scopes === undefined
          ? {}
          : {
              scopes: model.scopes,
            }),
      };
    },
    fromJson: (json: any): LoginRequestContent => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        username: json['username'],
        password: json['password'],
        ...(json['remember'] === undefined
          ? {}
          : {
              remember: json['remember'],
            }),
        ...(json['scopes'] === undefined
          ? {}
          : {
              scopes: json['scopes'],
            }),
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.login = this.login.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $urlEncodedForm = (model: {
    [key: string]: any;
  }): URLSearchParams => {
    const params = new URLSearchParams();
    const append = (key: string, value: any): void => {
      if (value === undefined || value === null) {
        return;
      }
      if (Array.isArray(value)) {
        value.forEach((v) => append(key, v));
      } else if (typeof value === 'object') {
        params.append(key, JSON.stringify(value));
      } else {
        params.append(key, String(value));
      }
    };
    Object.entries(model).forEach(([key, value]) => append(key, value));
    return params;
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async login(input: LoginRequest): Promise<Login200Response> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/x-www-form-urlencoded';
    }
    const body = this.$urlEncodedForm(
      $IO.LoginRequestContent.toJson(input),
    ).toString();

    const response = await this.$fetch(
      this.$url('/login', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return $IO.Login200Response.fromJson(await response.json());
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - FastAPI gaps > urlencoded form bodies > should send urlencoded key=value pairs, not JSON > types.gen.ts 1`] = `
"export type Login200Response = {
  username: string;
};
export type LoginRequestContent = {
  username: string;
  password: string;
  remember?: boolean;
  scopes?: Array<string>;
};

export type LoginRequest = LoginRequestContent;
export type LoginError = never;
"
`;
